@@ -1,11 +1,16 @@
 polyphone (2.4) unstable; urgency=low
 
+  * (new) player mode for using Polyphone as a synthesizer
   * (new) Catalan translation
   * (new) sfz opcodes amp_veltrack, fil_veltrack, fil_keytrack, fil_keycenter can be imported / exported
+  * (new) support of relative MIDI CC values
+  * (new) sample mode "release"
   * (improvement) the window borders are now an option
   * (improvement) faster and more accurate sound engine
   * (improvement) default controller values consistent with the modulators of the loaded soundfont
   * (improvement) GrandOrgue parser - group instruments by presets if switches are defined
+  * (improvement) GrandOrgue parser - reading the end of samples
+  * (improvement) GrandOrgue parser - use of the new sample mode "release"
   * (improvement) selecting a preset or preset divisions displays the corresponding instrument ranges on the keyboard
   * (fix) reading sf3 with uncompressed samples
   * (fix) processing pan / width / position during sfz import / export
@@ -14,6 +19,7 @@ polyphone (2.4) unstable; urgency=low
   * (fix) support of the sustain and sostenuto pedals
   * (fix) graphical bugs resolved
   * (fix) attenuation when using filter Q
+  * (fix) position numbers in the bulk rename function
 
  -- Davy Triponney <davy.triponney@gmail.com>  Mon, 5 Aug 2024 17:10:12 +0100
  
